fixed css error on align-right images

--- a/13 - Slide in on Scroll/style.css
+++ b/13 - Slide in on Scroll/style.css
@@ -27,7 +27,7 @@ h1 {
 	margin-right: 20px;
 }
 
-.align-right: {
+.align-right {
 	float: right;
 	margin-left: 20px;
 }
